--- a/lesson4/HW3/index.html
+++ b/lesson4/HW3/index.html
@@ -11,7 +11,7 @@
     <header style="background-color: red; height: 100px;">
         <h1 style="font-size: 24px; color: white;">Главный заголовок на странице</h1>
     </header>
-    <main style="background-color: blue; font-size 18px; height: 300px; color: white;">
+    <main style="background-color: blue; font-size: 18px; height: 300px; color: white;">
         <p>Семантическая верстка позволяет поисковым система лучшем понять контент страницы</p>
     </main>
     <footer style="color: white; background-color: green; font-size: 18px; height: 100px;">
