--- a/lesson6/task2/index.html
+++ b/lesson6/task2/index.html
@@ -23,9 +23,9 @@
         <li><span>Europe</span></li>
         <li><span>Asia</span></li>
         <li id="special"><span>Africa</span></li>
-        <li><span id="Antarctida" class="continent">Antarctida</span></li>
-        <li><span class="continent">South America</span></li>
-        <li><span class="continent">North America</span></li>
+        <li class="continent"><span id="Antarctida">Antarctida</span></li>
+        <li class="continent"><span>South America</span></li>
+        <li class="continent"><span>North America</span></li>
     </ul>
 </body>
 
