--- a/lesson8/task1/index.html
+++ b/lesson8/task1/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-    <div class="first">
+    <div class="first rectangle">
         Content Box Sizing
     </div>
-    <div class="second">
+    <div class="second rectangle">
         Border Box Sizing
     </div>
 </body>
