--- a/lesson10/task2/index.html
+++ b/lesson10/task2/index.html
@@ -12,7 +12,30 @@
 </head>
 
 <body>
+    <div class="page">
+        <header class="header">
+            <ul class="navigation">
+                <li class="nav_item">About</li>
+                <li class="nav_item">Products</li>
+                <li class="nav_item">Contacts</li>
+            </ul>
+        </header>
+        <main class="content">
+            <section class="dashboard">
+                <h2>I can use Flexbox!!!</h2>
+            </section>
+            <aside class="sidebar">
+                <h2 class="news">News</h2>
+                <ul>
+                    <li>News 1</li>
+                    <li>News 2</li>
+                    <li>News 3</li>
+                </ul>
+            </aside>
+        </main>
 
+        <footer class="footer"><span class="footer_text">Footer</span></footer>
+    </div>
 </body>
 
 </html>
