--- a/lesson10/task2/index.html
+++ b/lesson10/task2/index.html
@@ -26,10 +26,10 @@
             </section>
             <aside class="sidebar">
                 <h2 class="news">News</h2>
-                <ul>
-                    <li>News 1</li>
-                    <li>News 2</li>
-                    <li>News 3</li>
+                <ul class="ull">
+                    <li class="ull1">News 1</li>
+                    <li class="ull1">News 2</li>
+                    <li class="ull1">News 3</li>
                 </ul>
             </aside>
         </main>
