--- a/lesson12/index.html
+++ b/lesson12/index.html
@@ -14,19 +14,19 @@
 <body>
     <section>
         <h1>Web technologies</h1>
-        <p><span class="technologies"><b>HTML</b></span> <span class="translation"><em>(от англ. HyperText Markup
-                    Language —
-                    «язык гипертекстовой
-                    разметки»)</em></span>
+        <p><span class="technologies"><b>HTML</b></span> (от англ. <span class="translation"><em>HyperText Markup
+                    Language</em></span> —
+            «язык гипертекстовой
+            разметки»)
             —
             стандартизированный язык разметки документов во Всемирной паутине. Большинство веб-страниц содержат описание
             разметки на языке HTML (или XHTML). Язык <a target="_blank"
                 href="https://ru.wikipedia.org/wiki/HTML">HTML</a> интерпретируется браузерами; полученный в результате
             интерпретации форматированный текст отображается на экране монитора компьютера или мобильного устройства.
         </p>
-        <p><span class="technologies"><b>CSS</b></span> <span class="translation"><em>(/siːɛsɛs/ англ. Cascading Style
-                    Sheets — каскадные таблицы
-                    стилей)</em></span> —
+        <p><span class="technologies"><b>CSS</b></span> (/siːɛsɛs/ англ. <span class="translation"><em>Cascading Style
+                    Sheets</em></span> — каскадные таблицы
+            стилей) —
             формальный
             язык описания внешнего вида документа, написанного с использованием языка разметки.</p>
     </section>
