--- a/lesson15/task2/index.html
+++ b/lesson15/task2/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <video class="video_example"
-        src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task2/example.mp4"
-        controls></video>
+        src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task2/example.mp4" controls
+        poster="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task2/poster.jpg"></video>
 </body>
 
 </html>
