--- a/lesson16/task1/index.html
+++ b/lesson16/task1/index.html
@@ -16,10 +16,10 @@
             <input type="text" name="LastName" value="Emerson">
         </div>
         <div class="form-control">
-            <input type="number" name="age">
+            <input type="number" name="age" value="17">
         </div>
         <div class="form-control">
-            <input type="checkbox" name="agree">
+            <input type="checkbox" name="agree"> Accept terms and conditions
         </div>
         <div class="form-control">
             <input type="radio" name="gender" class="choose-gender"> Male
