--- a/lesson16/task1/index.html
+++ b/lesson16/task1/index.html
@@ -21,13 +21,13 @@
         <div class="form-control">
             <input type="checkbox" name="agree"> Accept terms and conditions
         </div>
-        <div class="form-control">
-            <input type="radio" name="gender" class="choose-gender"> Male
-            <input type="radio" name="gender" class="choose-gender"> Female
-            <input type="radio" name="gender" class="choose-gender"> Secret
+        <div class="choose-gender">
+            <input type="radio" name="gender"> Male
+            <input type="radio" name="gender"> Female
+            <input type="radio" name="gender"> Secret
         </div>
         <div class="form-control">
-            <textarea name="description" id="" placeholder="Write description..." cols="30" rows="10"></textarea>
+            <textarea name="description" id="" placeholder="Write description..."></textarea>
         </div>
         <div class="form-control">
             <button type="submit">submit</button>
