--- a/lesson16/task1/index.html
+++ b/lesson16/task1/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <form action="">
+    <form>
         <div class="form-control">
-            <input type="text" name="LastName" value="Emerson">
+            <input type="text" name="lastName" value="Emerson">
         </div>
         <div class="form-control">
             <input type="number" name="age" value="17">
