--- a/lesson16/task1/index.html
+++ b/lesson16/task1/index.html
@@ -1,11 +1,11 @@
+</html>
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -19,21 +19,20 @@
             <input type="number" name="age" value="17">
         </div>
         <div class="form-control">
-            <input type="checkbox" name="agree"> Accept terms and conditions
+            <input type="checkbox" name="agree">Accept terms and conditions
         </div>
         <div class="choose-gender">
-            <input type="radio" name="gender"> Male
+            <input type="radio" name="gender" checked>Male
             <input type="radio" name="gender"> Female
             <input type="radio" name="gender"> Secret
         </div>
         <div class="form-control">
-            <textarea name="description" id="" placeholder="Write description..."></textarea>
+            <textarea name="description" placeholder="Write description..."></textarea>
         </div>
         <div class="form-control">
-            <button type="submit">submit</button>
+            <button type="submit">Submit</button>
         </div>
     </form>
-
 </body>
 
 </html>
