--- a/lesson16/task2/index.html
+++ b/lesson16/task2/index.html
@@ -29,7 +29,7 @@
             <input type="radio" name="gender" id="Secret"><label for="Secret">Secret</label>
         </div>
         <div class="form-control">
-            <textarea name="description" placeholder="Write description..." maxlength="10"></textarea>
+            <textarea name="description" placeholder="Write description..." maxlength="10" required></textarea>
         </div>
         <div class="form-control">
             <button type="submit">Submit</button>
