--- a/lesson16/HW2/index.html
+++ b/lesson16/HW2/index.html
@@ -19,7 +19,7 @@
             <input type="checkbox" name="agree" disabled>
         </div>
         <div class="input">
-            <input type="checkbox" name="like" readonly>
+            <input type="checkbox" name="like" readonly checked>
         </div>
         <div class="input">
             <input type="color" name="favouriteColor" value="#ff7f50">
