--- a/lesson16/HW2/index.html
+++ b/lesson16/HW2/index.html
@@ -43,7 +43,7 @@
             <input type="number" name="favouriteNumber" value="17">
         </div>
         <div class="input">
-            <input type="textarea" name="story" maxlength="150" placeholder="A long time ago...">
+            <textarea name="story" cols="30" rows="5" placeholder="A long time ago..."></textarea>
         </div>
         <div class="input">
             <input type="password" name="password" value="secret">
