--- a/lesson16/HW2/index.html
+++ b/lesson16/HW2/index.html
@@ -50,7 +50,7 @@
         </div>
         <label class="languages input">
             <input type="radio" name="language" value="html">HTML
-            <input type="radio" name="language" value="сss"> CSS
+            <input type="radio" name="language" value="сss" checked> CSS
             <input type="radio" name="language" value="javascript">JavaScript
         </label>
         <div class="input">
@@ -80,8 +80,5 @@
         </div>
     </form>
 </body>
-
-
-<!-- textarea с именем story, у которой 5 строк по 30 символов и плейсхолдер "A long time ago..." -->
 
 </html>
