--- a/lesson16/HW2/index.html
+++ b/lesson16/HW2/index.html
@@ -16,7 +16,7 @@
             <input type="text" class="input__text" value="HTML" name="primaryLanguage" disabled>
         </div>
         <div class="input">
-            <input type="checkbox" name="agree" disabled>
+            <input type="checkbox" name="agree">
         </div>
         <div class="input">
             <input type="checkbox" name="like" readonly checked>
