--- a/lesson16/HW2/index.html
+++ b/lesson16/HW2/index.html
@@ -13,13 +13,13 @@
 <body>
     <form class="form">
         <div class="input">
-            <input type="text" class="input__text" value="HTML" name="primaryLanguage" disabled>
+            <input type="text" name="primaryLanguage" value="HTML" disabled>
         </div>
         <div class="input">
             <input type="checkbox" name="agree">
         </div>
         <div class="input">
-            <input type="checkbox" name="like" readonly checked>
+            <input type="checkbox" name="like" checked readonly>
         </div>
         <div class="input">
             <input type="color" name="favouriteColor" value="#ff7f50">
@@ -43,16 +43,16 @@
             <input type="number" name="favouriteNumber" value="17">
         </div>
         <div class="input">
-            <textarea name="story" cols="30" rows="5" placeholder="A long time ago..."></textarea>
+            <textarea name="story" rows="5" cols="30" placeholder="A long time ago..."></textarea>
         </div>
         <div class="input">
             <input type="password" name="password" value="secret">
         </div>
-        <label class="languages input">
+        <div class="languages input">
             <input type="radio" name="language" value="html">HTML
-            <input type="radio" name="language" value="сss" checked>CSS
+            <input type="radio" name="language" value="css" checked>CSS
             <input type="radio" name="language" value="javascript">JavaScript
-        </label>
+        </div>
         <div class="input">
             <input type="range" name="learningProgress" value="30">
         </div>
