--- a/lesson22/task3/index.html
+++ b/lesson22/task3/index.html
@@ -11,7 +11,14 @@
 </head>
 
 <body>
-
+    <main>
+        <picture>
+            <source srcset="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/task3/big.jpeg"
+                media="(min-width: 400px)">
+            <source srcset="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/task3/small.jpg">
+            <img src="" alt="Tree on the land">
+        </picture>
+    </main>
 </body>
 
 </html>
