--- a/les23/HW2/index.html
+++ b/les23/HW2/index.html
@@ -4,20 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+        integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+
 </head>
 
 <body>
-    <div class="main">
-        <div class="main__sections">
-            <div class="sections section1"><span>Navigation</span></div>
-            <div class="sections section2"><span>Products List</span></div>
-        </div>
-        <div class="sections main__section3"><span>News</span></div>
-    </div>
+    <main class="main">
+        <section class="main__sections">
+            <div class="section1 sections"><span>Navigation</span></div>
+            <div class="section2 sections"><span>Products List</span></div>
+        </section>
+        <div class="section3 sections"><span>News</span></div>
+
+    </main>
+
 </body>
 
 </html>
